--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.6
+engineering-notation==0.8.0
 et-xmlfile @ file:///home/conda/feedstock_root/build_artifacts/et_xmlfile_1674664118162/work
 executing==1.2.0
 fastjsonschema==2.17.1
