--- a/requirements.yml
+++ b/requirements.yml
@@ -180,6 +180,7 @@ dependencies:
       - decorator
       - defusedxml
       - dill
+      - engineering-notation
       - executing
       - fastjsonschema
       - fiona
